Do not trigger Lo-Fi on main frame requests

BUG=619513

Review-Url: https://codereview.chromium.org/2073233002
Cr-Commit-Position: refs/heads/master@{#401460}

Former-commit-id: 0fed1fbe1bc0ea5fa0a98795bd203f7a929ef2e9